restore Java 11 compatibility in tests
`java.util.stream.Stream.toList` is available since Java 16